# kanikervanaf

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: codestyle.yaml  docker.yaml  testing.yaml
resources/: docker-compose.yml  entrypoint.sh
tests/: test_website.py
website/: manage.py
website/documents/: Template-hierarchy.drawio
website/import/: apps.py  urls.py  views.py
website/import/templates/: import.html
website/kanikervanaf/: asgi.py  context_processors.py  forms.py  services.py  settings.py  sitemaps.py  urls.py  views.py  wsgi.py
website/kanikervanaf/api/: openapi.py  urls.py
website/kanikervanaf/settings/: __init__.py  base.py  development.py  production.py  settings.py
website/kanikervanaf/templates/: base.html  contact.html  faq.html  index.html  privacy.html  sidebar.html
website/kanikervanaf/tests/: test_services.py  test_views.py
website/mail/: apps.py  services.py  urls.py  views.py
website/mail/templates/: mails_send.html  verification_send.html
website/pdfgenerator/: apps.py  services.py
website/posts/: admin.py  apps.py  converters.py  forms.py  models.py  services.py  sitemaps.py  urls.py  views.py
website/posts/migrations/: 0001_initial.py  0002_auto_20201030_2227.py  0003_auto_20201031_1503.py  0004_alter_post_author.py  0005_alter_post_id.py
website/posts/templates/: post_details.html  post_overview.html
website/subscriptions/: admin.py  admin_views.py  apps.py  converters.py  forms.py  models.py  services.py  signals.py  sitemaps.py  urls.py  views.py
website/subscriptions/fixtures/: subscriptions.json
website/subscriptions/migrations/: 0001_initial.py  0002_auto_20200316_0953.py  0002_auto_20200329_2204.py  0002_auto_20201026_2013.py  0002_queuedmaillist_created.py  0003_auto_20200316_0954.py  0003_auto_20200605_1053.py  0003_auto_20201115_1529.py  0003_auto_20201116_1047.py  0004_auto_20200316_1001.py  0004_auto_20200611_1252.py  0004_auto_20201115_1630.py  0004_auto_20210505_2048.py  0005_auto_20200619_2054.py  0005_auto_20210716_1204.py  0005_subscription_slug.py  0006_auto_20200619_1228.py  0006_auto_20200619_2056.py  0006_auto_20210724_1740.py  0007_auto_20200619_2057.py  0007_auto_20210724_1756.py  0008_auto_20200619_2101.py  0008_auto_20210730_1232.py  0009_auto_20200619_2104.py  0009_subscriptioncategory_order.py  0010_auto_20200619_2105.py  0010_auto_20210804_1311.py  (+5 more)
website/users/: admin.py  apps.py  forms.py  models.py  services.py  sitemaps.py  urls.py  views.py
(+138 files in other folders)
