[tool.poetry]
name = "website"
version = "0.1.0"
description = "Django-based kanikervanaf website"
authors = ["Lars van Rhijn"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.4"
black = "^19.10b0"
pydocstyle = "^5.0.2"
requests = "^2.23.0"
Weasyprint = "^51"
django-recaptcha = "^2.0.6"
uwsgi = "^2.0.18"
psycopg2-binary = "^2.8.4"
django-admin-autocomplete-filter = "^0.5"
django-import-export = "^2.2.0"
django-robots = "^4.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
