[tool.poetry]
name = "website"
version = "0.1.0"
description = "Django-based kanikervanaf website"
authors = ["Lars van Rhijn"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.4"
black = "^19.10b0"
pydocstyle = "^5.0.2"
requests = "^2.23.0"
Weasyprint = "^51"
django-recaptcha = "^2.0.6"
uwsgi = "^2.0.18"
psycopg2-binary = "^2.8.4"
django-admin-autocomplete-filter = "^0.5"
django-import-export = "^2.2.0"
django-robots = "^4.0"
coverage = "^5.1"
django-cleanup = "^5.1.0"
djangorestframework = "^3.12.4"
django-oauth-toolkit = "^1.5.0"
uritemplate = "^3.0.1"
pdf2docx = "^0.5.2"
django-filter = "^2.4.0"
mock = "^4.0.3"
django-tinymce = "^3.3.0"
django-ordered-model = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
PyPDF2 = "^1.26.0"
freezegun = "^1.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
