[tool.poetry]
name = "kanikervanaf"
version = "1.0.0"
description = "Django-based kanikervanaf website"
authors = ["Lars van Rhijn"]

[tool.poetry.dependencies]
python = "~3.10"
pydocstyle = "^5.0.2"
requests = "^2.23.0"
Weasyprint = "^51"
uwsgi = "^2.0.18"
psycopg2-binary = "^2.8.4"
django-admin-autocomplete-filter = "^0.5"
django-import-export = "^2.7.0"
django-cleanup = "^5.1.0"
djangorestframework = "^3.12.4"
django-oauth-toolkit = "^1.5.0"
uritemplate = "^3.0.1"
pdf2docx = "^0.5.5"
django-filter = "^2.4.0"
django-tinymce = "^3.3.0"
django-ordered-model = "^3.4.3"
django-robots = "^5.0"
Django = "^4.1.7"
django-recaptcha = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
PyPDF2 = "^1.26.0"
freezegun = "^1.1.0"
django-doctor = "^2.5.0"
black = "^22.6.0"
coverage = "^6.4.2"
mock = "^4.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.djangodoctor]
disable = ["model-common-prefix"]
